--- a/El Trio Gravure/La Creation/La création.css
+++ b/El Trio Gravure/La Creation/La création.css
@@ -32,7 +32,21 @@ body {
             width: 20%;
             background-color: rgba(255, 255, 255, 0.03);
             color: white;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
+
+            nav ul{
+                list-style-type: none;
+                text-align: center;
+            }
+                nav a{
+                    text-decoration: none;
+                }
+                nav a:hover {
+                    text-decoration: underline;
+                }
 
         main{
             display: flex;
@@ -41,6 +55,11 @@ body {
             width: 80%;
             text-align: center;
         }
+
+            .space1{
+                height: 3%;
+                border: 1px solid blue;
+            }
 
             .crea0{
                 color: white;
@@ -54,9 +73,20 @@ body {
             .step{
                 display: flex;
                 justify-content: center;
-                width: 80%;
+                width: 100%;
                 text-align: center;
              }
+                .step ul{
+                    width: 80%;
+                    list-style-type: none;
+                    padding: 2%;
+                }
+                    .step h3{
+                        text-align: left;
+                    }
+                    .step p{
+                        text-align: justify;
+                    }
            
     footer{
         display:flex;
@@ -67,6 +97,13 @@ body {
         padding: 2%;
         color: white;
     }
+
+        footer a{
+            text-decoration: none;
+        }
+        footer a:hover{
+            text-decoration: underline;
+        }
         .telmail{
             width: 30%;
             text-align: center;
