--- a/El Trio Gravure/Contact/Contact.css
+++ b/El Trio Gravure/Contact/Contact.css
@@ -32,7 +32,21 @@ body {
             width: 20%;
             background-color: rgba(255, 255, 255, 0.03);
             color: white;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
+
+            nav ul{
+                list-style-type: none;
+                text-align: center;
+            }
+            nav a{
+                text-decoration: none;
+            }
+            nav a:hover {
+                text-decoration: underline;
+            }
 
         main{
             display: flex;
@@ -43,7 +57,7 @@ body {
             text-align: center;
         }
             .space1{
-                border: 1px solid red;
+                border: 1px solid blue;
                 height: 20%;
                 width: 100%;
             }
@@ -52,6 +66,13 @@ body {
                 flex-direction: row;
                 justify-content: space-around;
             }
+
+                .con2 a{
+                    text-decoration: none;
+                }
+                .con2 a:hover{
+                    text-decoration: underline;
+                }
                 .mail{
                     width: 50%;
                 }
@@ -69,6 +90,12 @@ body {
         padding: 2%;
         color: white;
     }
+        footer a{
+            text-decoration: none;
+        }
+        footer a:hover{
+            text-decoration: underline;
+        }
         .telmail{
             width: 30%;
             text-align: center;
