Update Nav et footer

--- a/El Trio Gravure/Contact/Contact.css
+++ b/El Trio Gravure/Contact/Contact.css
@@ -37,16 +37,29 @@ body {
             align-items: center;
         }
 
+            nav h3{
+                font-size: 2em;
+            }
+
             nav ul{
                 list-style-type: none;
                 text-align: center;
             }
-            nav a{
-                text-decoration: none;
-            }
-            nav a:hover {
-                text-decoration: underline;
-            }
+                nav a {
+                    display: block;
+                    padding: 10px 20px;
+                    margin: 5px 0;
+                    background-color: #555; /* Couleur de fond du bouton */
+                    color: white; /* Couleur du texte */
+                    text-align: center;
+                    text-decoration: none; /* Supprime la décoration de texte par défaut (soulignement) */
+                    border-radius: 5px; /* Bords arrondis */
+                    transition: background-color 0.3s ease; /* Transition pour l'effet au survol */
+                }
+
+                nav a:hover {
+                    background-color: #777; /* Couleur de fond au survol */
+                }
 
         main{
             display: flex;
@@ -106,3 +119,13 @@ body {
             text-align: center;
             color:white ;
         }
+            .resicon {
+                padding: 2%;
+                width: 15%; /* Ajustez la taille selon vos besoins */
+                vertical-align: middle; /* Aligne verticalement les icônes avec le texte */
+                transition: filter 0.3s ease; /* Transition pour l'effet au survol */
+            }
+
+            .resicon:hover {
+                filter: brightness(1.5); /* Éclaircit l'icône au survol */
+            }
