--- a/El Trio Gravure/La Creation/La création.css
+++ b/El Trio Gravure/La Creation/La création.css
@@ -9,14 +9,14 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background: black;
+    background: #0e0e0e;
 }
 
     header{
         border: 1px solid red;
 
         width: 100%;
-        background-color: rgba(255, 255, 255, 0.03);
+        background-color: #1a1a1a;
         color: white;
         text-align: center;
         padding: 1em 0;
@@ -30,7 +30,7 @@ body {
         nav{
             padding: 2%;
             width: 20%;
-            background-color: rgba(255, 255, 255, 0.03);
+            background-color: #1a1a1a;
             color: white;
             display: flex;
             flex-direction: column;
@@ -132,7 +132,7 @@ body {
         width: 100%;
         justify-content: center;
         border:1px solid brown;
-        background: rgba(245, 245, 245, 0.03);
+        background: #1a1a1a;
         padding: 2%;
         color: white;
     }
