Update change Background

--- a/El Trio Gravure/Accueil/Accueil.css
+++ b/El Trio Gravure/Accueil/Accueil.css
@@ -189,6 +189,9 @@ main{
             text-align: center;
             color: white;
         }
+            .telmail p{
+                text-decoration: ;
+            }
         .reseaux {
             width: 30%;
             text-align: center;
