--- a/El Trio Gravure/Nos Modèles/Nos Modèles.css
+++ b/El Trio Gravure/Nos Modèles/Nos Modèles.css
@@ -114,6 +114,11 @@ body {
                             .pic1{
                                 width: 80%;
                                 border-radius: 5%;
+                                cursor: pointer;
+                            }
+
+                            .pic :hover{
+
                             }
 
                         .txtmod1{
