--- a/El Trio Gravure/Contact/Contact.css
+++ b/El Trio Gravure/Contact/Contact.css
@@ -20,7 +20,7 @@ body {
 
 
     header{
-        border: 1px solid red;
+        border:1px solid rgba(255, 255, 255, 0.25);
 
         width: 100%;
         background-color: #1a1a1a;
@@ -78,8 +78,7 @@ body {
             text-align: center;
         }
             .space1{
-                border: 1px solid blue;
-                height: 10%;
+                height: 7%;
                 width: 100%;
             }
 
@@ -168,14 +167,13 @@ body {
 .space2{
     width: 100%;
     height: 50px;
-    border: 1px solid blue;
 }
 
     footer{
         display:flex;
         width: 100%;
         justify-content: center;
-        border:1px solid brown;
+        border:1px solid rgba(255, 255, 255, 0.25);
         background: #1a1a1a;
         padding: 2%;
         color: white;
