--- a/El Trio Gravure/La Creation/La création.css
+++ b/El Trio Gravure/La Creation/La création.css
@@ -13,7 +13,7 @@ body {
 }
 
     header{
-        border: 1px solid red;
+        border:1px solid rgba(255, 255, 255, 0.25);
 
         width: 100%;
         background-color: #1a1a1a;
@@ -49,16 +49,16 @@ body {
                     display: block;
                     padding: 10px 20px;
                     margin: 5px 0;
-                    background-color: #555; /* Couleur de fond du bouton */
-                    color: white; /* Couleur du texte */
+                    background-color: #555;
+                    color: white;
                     text-align: center;
-                    text-decoration: none; /* Supprime la décoration de texte par défaut (soulignement) */
-                    border-radius: 5px; /* Bords arrondis */
-                    transition: background-color 0.3s ease; /* Transition pour l'effet au survol */
+                    text-decoration: none;
+                    border-radius: 5px;
+                    transition: background-color 0.3s ease;
                 }
 
                 nav a:hover {
-                    background-color: #777; /* Couleur de fond au survol */
+                    background-color: #777;
                 }
 
         main{
@@ -70,8 +70,7 @@ body {
         }
 
             .space1{
-                height: 3%;
-                border: 1px solid blue;
+                height: 3%
             }
 
             .crea0{
@@ -105,8 +104,8 @@ body {
                         display: none;
                     }
                     .toggle-title {
-                        margin-top: 20px; /* Ajoute un espace au-dessus de chaque titre */
-                        margin-bottom: 10px; /* Ajoute un espace en dessous de chaque titre */
+                        margin-top: 20px;
+                        margin-bottom: 10px;
                         display: block;
                     }
                     .toggle-title:hover{
@@ -116,7 +115,10 @@ body {
 
                     .toggle-content {
                         display: none;
-                        margin-top: 10px;
+                        border:  1px solid rgba(255, 255, 255, 0.3);
+                        border-radius: 10px;
+                        background: #1f1f1f;
+                        padding: 2%;
                     }
                     .toggle-checkbox:checked + .toggle-title {
                         text-decoration: underline;
@@ -131,7 +133,7 @@ body {
         display:flex;
         width: 100%;
         justify-content: center;
-        border:1px solid brown;
+        border:1px solid rgba(255, 255, 255, 0.25);
         background: #1a1a1a;
         padding: 2%;
         color: white;
@@ -155,11 +157,11 @@ body {
         }
             .resicon {
                 padding: 2%;
-                width: 15%; /* Ajustez la taille selon vos besoins */
-                vertical-align: middle; /* Aligne verticalement les icônes avec le texte */
-                transition: filter 0.3s ease; /* Transition pour l'effet au survol */
+                width: 15%;
+                vertical-align: middle;
+                transition: filter 0.3s ease;
             }
 
             .resicon:hover {
-                filter: brightness(1.5); /* Éclaircit l'icône au survol */
+                filter: brightness(1.5);
             }
