--- a/El Trio Gravure/Nos Modèles/Nos Modèles.css
+++ b/El Trio Gravure/Nos Modèles/Nos Modèles.css
@@ -49,16 +49,16 @@ body {
                     display: block;
                     padding: 10px 20px;
                     margin: 5px 0;
-                    background-color: #555; /* Couleur de fond du bouton */
-                    color: white; /* Couleur du texte */
+                    background-color: #555;
+                    color: white;
                     text-align: center;
-                    text-decoration: none; /* Supprime la décoration de texte par défaut (soulignement) */
-                    border-radius: 5px; /* Bords arrondis */
-                    transition: background-color 0.3s ease; /* Transition pour l'effet au survol */
+                    text-decoration: none;
+                    border-radius: 5px;
+                    transition: background-color 0.3s ease;
                 }
 
                 nav a:hover {
-                    background-color: #777; /* Couleur de fond au survol */
+                    background-color: #777;
                 }
 
         main{
@@ -316,11 +316,11 @@ body {
         }
             .resicon {
                 padding: 2%;
-                width: 15%; /* Ajustez la taille selon vos besoins */
-                vertical-align: middle; /* Aligne verticalement les icônes avec le texte */
-                transition: filter 0.3s ease; /* Transition pour l'effet au survol */
+                width: 15%;
+                vertical-align: middle;
+                transition: filter 0.3s ease;
             }
 
             .resicon:hover {
-                filter: brightness(1.5); /* Éclaircit l'icône au survol */
+                filter: brightness(1.5);
             }
