--- a/El Trio Gravure/Nos Projets/Nos Projets.css
+++ b/El Trio Gravure/Nos Projets/Nos Projets.css
@@ -13,7 +13,7 @@ body {
 }
 
     header{
-        border: 1px solid red;
+        border: 1px solid rgba(255, 255, 255, 0.23);
 
         width: 100%;
         background-color: #1a1a1a;
@@ -49,16 +49,16 @@ body {
                     display: block;
                     padding: 10px 20px;
                     margin: 5px 0;
-                    background-color: #555; /* Couleur de fond du bouton */
-                    color: white; /* Couleur du texte */
+                    background-color: #555;
+                    color: white;
                     text-align: center;
-                    text-decoration: none; /* Supprime la décoration de texte par défaut (soulignement) */
-                    border-radius: 5px; /* Bords arrondis */
-                    transition: background-color 0.3s ease; /* Transition pour l'effet au survol */
+                    text-decoration: none;
+                    border-radius: 5px;
+                    transition: background-color 0.3s ease;
                 }
 
                 nav a:hover {
-                    background-color: #777; /* Couleur de fond au survol */
+                    background-color: #777;
                 }
 
         main{
@@ -67,7 +67,6 @@ body {
             padding: 2%;
             width: 80%;
             text-align: center;
-            border: 1px solid red;
         }
 
             .pr0{
@@ -84,11 +83,9 @@ body {
                flex-direction: row;
                padding: 2%;
                width: 100%;
-               border:  1px solid red;
            }
                 .imgpr1{
                     width: 50%;
-                    border:  1px solid red;
                     padding: 2%;
 
 
@@ -101,7 +98,9 @@ body {
                 .txtpr1{
                     color: white;
                     width: 50%;
-                    border:  1px solid red;
+                    border:  1px solid rgba(255, 255, 255, 0.3);
+                    border-radius: 10px;
+                    background: #1f1f1f;
                     padding: 2%;
                     text-align: justify;
                 }
@@ -111,11 +110,9 @@ body {
                 flex-direction: row-reverse;
                 padding: 2%;
                 width: 100%;
-                border:  1px solid green;
             }
             .imgpr2{
                 width: 50%;
-                border:  1px solid green;
                 padding: 2%;
 
 
@@ -128,7 +125,9 @@ body {
             .txtpr2{
                 color: white;
                 width: 50%;
-                border:  1px solid green;
+                border:  1px solid rgba(255, 255, 255, 0.3);
+                border-radius: 10px;
+                background: #1f1f1f;
                 padding: 2%;
                 text-align: justify;
             }
@@ -138,11 +137,9 @@ body {
                 flex-direction: row;
                 padding: 2%;
                 width: 100%;
-                border:  1px solid blue;
             }
             .imgpr3{
                 width: 50%;
-                border:  1px solid blue;
                 padding: 2%;
 
 
@@ -155,7 +152,9 @@ body {
             .txtpr3{
                 color: white;
                 width: 50%;
-                border:  1px solid blue;
+                border:  1px solid rgba(255, 255, 255, 0.3);
+                border-radius: 10px;
+                background: #1f1f1f;
                 padding: 2%;
                 text-align: justify;
             }
@@ -164,7 +163,7 @@ body {
         display:flex;
         width: 100%;
         justify-content: center;
-        border:1px solid brown;
+        border: 1px solid rgba(255, 255, 255, 0.23);
         background: #1a1a1a;
         padding: 2%;
         color: white;
@@ -188,11 +187,11 @@ body {
             }
             .resicon {
                 padding: 2%;
-                width: 15%; /* Ajustez la taille selon vos besoins */
-                vertical-align: middle; /* Aligne verticalement les icônes avec le texte */
-                transition: filter 0.3s ease; /* Transition pour l'effet au survol */
+                width: 15%;
+                vertical-align: middle;
+                transition: filter 0.3s ease;
             }
 
             .resicon:hover {
-                filter: brightness(1.5); /* Éclaircit l'icône au survol */
+                filter: brightness(1.5);
             }
