--- a/El Trio Gravure/Nos Projets/Nos Projets.css
+++ b/El Trio Gravure/Nos Projets/Nos Projets.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     color: white;
+    line-height: 1.3;
 }
 
 body {
@@ -103,6 +104,7 @@ body {
                     background: #1f1f1f;
                     padding: 2%;
                     text-align: justify;
+
                 }
 
             .pr2{
