--- a/index.css
+++ b/index.css
@@ -13,15 +13,31 @@ body {
     background: #0e0e0e;
 }
 
-    header{
-        border:1px solid rgba(255, 255, 255, 0.25);
-
+    header {
+        border: 1px solid rgba(255, 255, 255, 0.25);
         width: 100%;
         background-color: #1a1a1a;
         color: white;
-        text-align: center;
-        padding: 1em 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 2%;
     }
+
+        header h1 {
+            margin: 0;
+            flex-grow: 1;
+            text-align: center;
+        }
+
+        .logoheader {
+            width: auto;
+            margin-left: auto;
+        }
+
+        .logoheader img {
+            width: 100px;
+        }
 
     .inter{
         display: flex;
