--- a/index.css
+++ b/index.css
@@ -6,6 +6,15 @@
     line-height: 1.3;
 }
 
+@media handheld {
+
+    h1{
+        font-size: 100em;
+    }
+
+}
+
+
 body {
     display: flex;
     flex-direction: column;
