--- a/index.css
+++ b/index.css
@@ -9,8 +9,23 @@
 @media handheld {
 
     h1{
-        font-size: 100em;
+        font-size: 6em;
     }
+    h2{
+        font-size: 4em;
+    }
+
+    h3{
+        font-size: 3em;
+    }
+    h4{
+        font-size: 2.5em;
+    }
+
+    p{
+        font-size: 2em;
+    }
+
 
 }
 
