--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
     line-height: 1.3;
 }
 
-@media handheld {
+@media screen and (max-width: 767px){
 
     h1{
         font-size: 6em;
@@ -25,10 +25,8 @@
     p{
         font-size: 2em;
     }
-
-
+    
 }
-
 
 body {
     display: flex;
