--- a/index.css
+++ b/index.css
@@ -1,3 +1,40 @@
+
+
+@media all and (orientation: portrait) {
+    body {
+        font-size: 18px; /* Augmenter la taille de la police pour le corps */
+    }
+
+    h1 {
+        font-size: 2.2em; /* Ajuster la taille des titres */
+    }
+
+    h2 {
+        font-size: 1.7em; /* Ajuster la taille des titres */
+    }
+
+    h3 {
+        font-size: 1.37em; /* Ajuster la taille des titres */
+    }
+
+    h4 {
+        font-size: 1.2em; /* Ajuster la taille des titres */
+    }
+
+    h5 {
+        font-size: 1em; /* Ajuster la taille des titres */
+    }
+
+    h6 {
+        font-size: 0.83em; /* Ajuster la taille des titres */
+    }
+
+    p {
+        font-size: 1.2em; /* Ajuster la taille des paragraphes */
+    }
+}
+}
+
 *{
     margin: 0;
     padding: 0;
